# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2016-12-16 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add terminate_delay service configuration option to allow a
      service instance to delay a restart
      (attempting to avoid spurious failures when the failure cause
       requires a short amount of time to be resolved)
      based on the suggestions of Richard Carlsson in
      https://github.com/erlang/otp/pull/1287
    * Fix service restarts to ensure all terminate functions have completed
      (or service thread(s) had a termination timeout complete)
      before restarting the service instance
    * Fix service configuration option timeout_terminate value output
      in log output of the service configuration

2016-12-15 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add count result to cloudi_timestamp:seconds_filter/3 return value

2016-12-10 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Make Erlang file module use more efficient with additional usage of
      the raw option and pwrite

2016-11-28 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Avoid deprecated std::auto_ptr in C++11

2016-11-23 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix to avoid triggering SYN flooding protection in
      newer Linux kernel versions
      (e.g., 4.4.0-47 used with Ubuntu 16.04.1)
    * Improve error log output

2016-11-22 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Improve external service startup time
    * Minor integration test fix

2016-11-21 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update cpg
    * Update trie

2016-11-16 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Make OS time more efficient in cloudi_timestamp

2016-11-11 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update cpg

2016-11-10 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update cpg

2016-11-06 Michael Truog   <mjtruog [at] gmail (dot) com>
